--- a/src/PlayerSelection/playerSelection.css
+++ b/src/PlayerSelection/playerSelection.css
@@ -44,3 +44,12 @@ a:link, a:visited, a:hover, a:active {
 .blue {
 	background-color: blue;
 }
+
+button {
+	height: 40px;
+	padding: 0 10px 0 10px;
+	margin: 15px;
+	font-size: 1.3vmin;
+	background-color: #282c34;
+	color: white;
+}
